# Klondike

./: .gitignore  CMakeLists.txt  Makefile  README.md  SFMLConfig.cmake
.github/workflows/: build.yml
src/: Card.cpp  Card.hpp  Klondike.cpp  Klondike.hpp  KlondikeEvents.cpp  Sound.cpp  Sound.hpp  Tas.cpp  Tas.hpp  Tile.cpp  Tile.hpp  main.cpp
